[iOS] Break retain cycle in InfoBars.

This CLs breaks retain cycles such as:
InfoBarView -> LabelLinkController ->
BeforeTranslateInfoBarController -> InfoBarView

BUG=732384

Review-Url: https://codereview.chromium.org/2933833002
Cr-Commit-Position: refs/heads/master@{#478618}

Former-commit-id: db9fc12b563cc860af67e91a571c262afcef72f8